kotlin/programming-kotlin_code/inheritance/output/Derived.output
Derived.kt:1:31: error: unresolved reference: Card
class Derived(suit: String) : Card(suit)
                              ^
Error: Could not find or load main class DerivedKt
Caused by: java.lang.ClassNotFoundException: DerivedKt
